<resources>
    <string name="app_name">Ships and pets</string>
    <string name="main_activity_title">Задание на 20.03.23</string>

    <!--Животное-->
    <string name="animal_header">Редактирование модели животного</string>
    <string name="ship_header">Редактирование модели корабля</string>

    <string name="breed_label">Порода</string>
    <string name="breed">Задать породу</string>


    <string name="animal_name_label">Кличка</string>
    <string name="animal_name">Задать кличку</string>

    <string name="owner_snp_label">ФИО владельца</string>
    <string name="owner_snp">Задать ФИО</string>

    <string name="animal_weight_label">Вес животного</string>
    <string name="animal_weight">Задать вес животного</string>

    <string name="animal_age_label">Возраст</string>
    <string name="animal_age">Задать возраст животного</string>


    <string name="special_care">Специальный уход</string>
    <string name="special_diet">Специальная диета</string>
    <string name="animals_list_activity_title">Список домашних животных</string>

    <!--Судно-->
    <string name="shipType_label">Тип судна</string>
    <string name="bulk">Балкер</string>
    <string name="container_carrier">Контейнеровоз</string>

    <string name="anchorageNeeds">Требуется якорная стоянка</string>
    <string name="pilotNeeds">Требуется ли специальный пирс</string>
    <string name="refuelingNeeds">Требуется дозаправка топливом</string>


    <string name="loadCapacity_label">Грузоподъемность судна</string>
    <string name="loadCapacity">Задать грузоподъемность судна</string>

    <string name="destination_label">Пункт назначения</string>
    <string name="destination">Задать пункт назначения</string>

    <string name="cargoType_label">Тип груза</string>
    <string name="cargoType">Задать тип груза</string>

    <string name="cargoWeight_label">Вес груза</string>
    <string name="cargoWeight">Задать вес груза</string>

    <string name="tonPrice_label">Стоимость 1 тонны груза</string>
    <string name="tonPrice">Задать стоимость</string>

    <string name="general_price">Стоимость груза: 0.00 $.</string>
    <string name="ships_list_activity_title">Список суден</string>


    <!--Общие кнопки-->
    <string name="btn_clean">Очистить поля</string>
    <string name="btn_exit">Выход</string>
    <string name="btn_save">Сохранить</string>

    <string name="btn_increase">+</string>
    <string name="btn_reduce">–</string>

    <!--Кнопки главной активности-->
    <string name="btn_animal">Список животных</string>
    <string name="btn_ship">Список суден</string>

    <!--Кнопки активности редактирования корабля-->
    <string name="btn_count">Стоимость груза</string>

</resources>