<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ShipActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <!--Заголовок-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/ship_header"
            android:textSize="21sp" />

        <!--Id объекта-->
        <TextView

            android:id="@+id/shipId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="4dp"
            android:textSize="18sp" />

        <!--Тип судна-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/shipType_label"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/dropDownType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="15dp"
            android:layout_marginStart="5dp"

            />

        <!--Грузоподъемность-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/loadCapacity_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/loadCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/loadCapacity"
            android:inputType="number"
            android:paddingTop="7dp"
            android:paddingBottom="12dp"
            android:textSize="22sp" />

        <!--Пункт назначения-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/destination_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/destination"
            android:paddingTop="7dp"
            android:paddingBottom="12dp"
            android:textSize="22sp" />

        <!--Якорная стоянка-->
        <Switch
            android:id="@+id/swtAnchorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/anchorageNeeds"
            android:textSize="18sp" />

        <!--Требуется лоцман-->

        <Switch
            android:id="@+id/swtPilot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/pilotNeeds"
            android:textSize="18sp" />

        <!--Требуется лоцман-->

        <Switch
            android:id="@+id/swtRefueling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/refuelingNeeds"
            android:textSize="18sp" />

        <!--Тип груза-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/cargoType_label"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/dropDownCargoType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="15dp"
            android:layout_marginStart="5dp"
            />

        <!--Вес груза-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/cargoWeight_label"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="100"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReduceWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="6dp"
                android:layout_weight="14"
                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="13dp"
                android:text="@string/btn_reduce" />

            <EditText
                android:id="@+id/cargoWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="72"
                android:gravity="center"
                android:hint="@string/cargoWeight"
                android:inputType="number"
                android:paddingTop="7dp"
                android:paddingBottom="12dp"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnIncreaseWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="13dp"
                android:text="@string/btn_increase" />
        </LinearLayout>

        <!--Стоимость 1 тонны-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/tonPrice_label"
            android:textSize="18sp" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginStart="6dp"
            >

            <Button
                android:id="@+id/btnReducePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="14"
                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="13dp"
                android:text="@string/btn_reduce" />

            <EditText
                android:id="@+id/tonPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:gravity="center"
                android:hint="@string/tonPrice"
                android:inputType="number"
                android:paddingTop="7dp"
                android:paddingBottom="12dp"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnIncreasePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="13dp"
                android:text="@string/btn_increase" />
        </LinearLayout>

        <TextView
            android:id="@+id/cargoPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/general_price"
            android:textSize="21sp" />

        <!--Кнопки-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCountPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="13dp"
                android:text="@string/btn_count" />

            <Button
                android:id="@+id/btnCleanShip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="13dp"
                android:text="@string/btn_clean" />

        </LinearLayout>


        <ImageView
            android:id="@+id/shipImage"
            android:layout_width="276dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"

                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"

                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="13dp"
                android:text="@string/btn_save" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>