<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <!--Заголовок-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:gravity="start"
            android:paddingTop="7dp"
            android:paddingBottom="8dp"
            android:text="@string/main_activity_title"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:backgroundTint="@color/conduct_el_main"
            android:paddingVertical="13dp"
            android:text="@string/btn_animal" />



        <Button
            android:id="@+id/btnShip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:backgroundTint="@color/conduct_el_main"
            android:paddingVertical="13dp"
            android:text="@string/btn_ship" />

        <!--Блок вывода изображений-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


        </LinearLayout>

        <!--Кнопка выхода-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"

                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"

                android:backgroundTint="@color/conduct_el_main"
                android:paddingVertical="13dp"
                android:text="@string/btn_exit" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>